--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Railsgirls</title>
-  <link rel="stylesheet" href="//railsgirls.com/assets/bootstrap.css">
-  <link rel="stylesheet" href="//railsgirls.com/assets/bootstrap-theme.css">
+  <link rel="stylesheet" href="http://railsgirls.com/assets/bootstrap.css">
+  <link rel="stylesheet" href="http://railsgirls.com/assets/bootstrap-theme.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -28,6 +28,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/ideas">Ideas</a></li>
+        <li ><%= link_to 'New Idea', new_idea_path %></li>
       </ul>
     </div>
   </div>
@@ -38,7 +39,7 @@
     Rails Girls 2015
   </div>
 </footer>
-<script src="//railsgirls.com/assets/bootstrap.js"></script>
+<script src="http://railsgirls.com/assets/bootstrap.js"></script>
 
 </body>
 </html>
